--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -42,9 +42,8 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: ${{ inputs.aws_region }}
-          role-to-assume: "gha-ecr"
+          role-to-assume: "arn:aws:iam::${{ inputs.aws_account_id }}:role/gha-ecr"
           mask-aws-account-id: "no"
-          aws-account-id: ${{ inputs.aws_account_id }}
 
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
