--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -4,7 +4,13 @@ on:
   push: # tmp for testing
   pull_request:
 
+permissions:
+  id-token: write
+  contents: read
+  pull-requests: write
+  actions: read
 
 jobs:
   build:
     uses: ./.github/workflows/_build.yml
+    secrets: inherit
