do not require inputs with defaults

--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -22,7 +22,7 @@ on:
         type: string
         required: false
         description: 'Docker context'
-        default: './message-processor'
+        default: 'message-processor'
 
 
 permissions:
