github docker build action different api then docker locally

--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -17,7 +17,7 @@ on:
         type: string
         required: false
         description: 'Dockerfile path'
-        default: 'Dockerfile'
+        default: 'message-processor/Dockerfile'
       context:
         type: string
         required: false
